# pyrsm

./: .gitattributes  .gitignore  AGENTS.md  AI_ASSISTANT_ENHANCEMENT_PLAN.md  CLAUDE.md  CLAUDE_DESKTOP.md  GPT51-pdp-plots.md  GPT51-polars-plotnine.md  GTP51-plolars.md  MANIFEST.in  MCP_README.md  Makefile  PLOTTING_MIGRATION.md  README.md  TESTING.md  TODO.sh  check_versions.py  claude_generated_code.py  claude_mcp_client.py  mcp_examples.md  mcp_server.py  mcp_setup_guide.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_ai_baseline.py  test_ai_executable.py  test_copilot_baseline.py
conda/pyrsm/: meta.yaml
docs/: conf.py  index.rst  modules.rst  pyrsm.basics.rst  pyrsm.data.basics.rst  pyrsm.data.data.rst  pyrsm.data.design.rst  pyrsm.data.model.rst  pyrsm.data.multivariate.rst  pyrsm.data.rst  pyrsm.design.rst  pyrsm.model.rst  pyrsm.radiant.basics.rst  pyrsm.radiant.data.rst  pyrsm.radiant.model.rst  pyrsm.radiant.rst  pyrsm.rst
examples/: basics-compare-means.ipynb  basics-compare-proportions.ipynb  basics-compare-props.ipynb  basics-correlation.html  basics-correlation.ipynb  basics-cross-tabs.ipynb  basics-goodness.ipynb  basics-probability-calculator.ipynb  basics-single-mean.ipynb  basics-single-proportion.ipynb  fraudData-tree-classification-data.csv  load-example-data.ipynb  mcp_notebook_demo.ipynb  model-DecisionTree-classification.ipynb  model-RandomForest-classification.ipynb  model-XGB-classification.ipynb  model-linear-regression-vn.ipynb  model-linear-regression.ipynb  model-linear-regression.qmd  model-logistic-regression.ipynb  model-logistic-regression.json  model-logistic-regression.qmd  model-mlp-classification.ipynb  model-rforest-classification.ipynb  model-tree-classification.ipynb  save-load-state.ipynb  start-gitgadget.ipynb  start-radiant-for-R.ipynb  start-radiant-for-python.ipynb  start-radiant.ipynb  streamlit-logistic-app.py  streamlit-regression-app.py  streamlit-test-app.py  using-r-and-python.ipynb  using-r-notebook.ipynb
examples/basics/: basics-compare-means.ipynb  basics-compare-props.ipynb  basics-correlation.ipynb  basics-cross-tabs.ipynb  basics-goodness.ipynb  basics-probability-calculator.ipynb  basics-single-mean-plotting.qmd  basics-single-mean.ipynb  basics-single-proportion.ipynb
examples/data/: load-example-data.ipynb  save-load-state.ipynb
examples/eda/: eda-explore.ipynb  eda-pivot.ipynb  eda-visualize.ipynb  unpivot_examples.ipynb
examples/figures/: icon-header.html
examples/figures_basics/: compare_means_summary
examples/model/: model-exgboost-classification.ipynb  model-linear-regression.ipynb  model-linear-regression.qmd  model-logistic-regression-quarto.html  model-logistic-regression.ipynb  model-logistic-regression.json  model-logistic-regression.qmd  model-mlp-classification.ipynb  model-mlp-classification.qmd  model-mlp-regression.ipynb  model-mlp-regression.qmd  model-pdp-plots.ipynb  model-rforest-classification.ipynb  model-rforest-regression.ipynb  model-xgboost-classification.ipynb  model-xgboost-regression.ipynb
examples/multivariate/: multivariate-factor-analysis.ipynb
mcp-server/: .mcp.json  ASYNC_FIX_SUMMARY.md  CHECKPOINT_2_SUMMARY.md  CHECKPOINT_4_SUMMARY.md  DJANGO_INTEGRATION_GUIDE.md  DJANGO_MCP_INTEGRATION.md  INTEGRATION_DESIGN.md  INTERACTIVE_FEATURES.md  Makefile  PROMPT_MAGIC_README.md  PYRSM-MCP.md  QUICK_START.md  README.md  REGRESSION_TOOLS.md  SETUP.md  SUGGESTED_PROMPTS.md  VS_CODE_QUICK_START.md  WEB_ARCHITECTURE.md  mcp-test.ipynb  mcp_bridge_magic.py  prompt_magic.py  pyproject.toml  server.py  server_regression.py  test_all_tools.py  test_async_fix.py  test_code_generation.py  test_data_loading.py  test_file_loading.py  test_fixes_simple.py  test_gemini_tool_selection.py  test_mcp_file_loading.py  test_mcp_integration.py  test_model_context.py  test_prompt_magic.py  test_prompt_magic_ipython.py  test_regression.py  test_server.py  test_single_mean_tool.py
mcp-server/examples/: demo_active_dataset.ipynb  mcp_magic_demo.ipynb  prompt_demo.ipynb  tools_demo.ipynb
mcp-server/examples/htmx-alpine-patterns/: GETTING_STARTED.md  Makefile  README.md  TESTING.md  pytest.ini  requirements.txt
mcp-server/examples/htmx-alpine-patterns/app/: __init__.py  urls.py  views.py
mcp-server/examples/htmx-alpine-patterns/app/static/css/: patterns.css
mcp-server/examples/htmx-alpine-patterns/app/static/js/: conditional-visibility.js  dependent-dropdowns.js
mcp-server/examples/htmx-alpine-patterns/app/templates/: base.html
mcp-server/examples/htmx-alpine-patterns/app/templates/patterns/: conditional_visibility.html  dependent_dropdowns.html  index.html
mcp-server/examples/htmx-alpine-patterns/app/templates/patterns/partials/: column_options.html  distribution_params.html  test_params.html
mcp-server/examples/htmx-alpine-patterns/config/: settings.py  urls.py  wsgi.py
mcp-server/examples/htmx-alpine-patterns/tests/: conftest.py  test_conditional_visibility.py  test_dependent_dropdowns.py
pyrsm/: __init__.py  basics.py  bins.py  example_data.py  logistic.py  logistic_regression.py  logit.py  model.py  notebook.py  perf.py  props.py  pyrsm.py  read_data.py  regress.py  regression.py  stats.py  utils.py  visualize.py
pyrsm/basics/: __init__.py  central_limit_theorem.py  compare_means.py  compare_props.py  correlation.py  cross_tabs.py  display_utils.py  goodness.py  goodness_of_fit.py  plotting_utils.py  probability_calculator.py  probability_calculator_functions.py  single_mean.py  single_prop.py  utils.py
pyrsm/design/: __init__.py  (+1 more)
scripts/: test_prob_import.py
tests/: conftest.py  test_basics.py  test_bins.py  test_central_limit_theorem.py  test_compare_means.py  test_compare_props.py  test_correlation_ext.py  test_cross_tabs.py  test_eda.py  test_example_data.py  test_goodness.py  test_logistic.py  test_mlp.py  test_model_utils.py  test_pdp.py  test_perf.py  test_plot_migration.py  test_prob_calc.py  test_pyrsm.py  test_regress.py  test_regression.py  test_rforest.py  test_single_mean.py  test_single_prop.py  test_stats.py  test_utils.py  test_xgb.py
(+215 files in other folders)
