[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrsm"
dynamic = ["version"]
description = "Python package used in the MSBA program the Rady School of Management @ UCSD"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
authors = [
    {name = "Vincent Nijs", email = "vnijs@ucsd.edu"},
    {name = "Vikram Jambulapati", email = "vikjam@ucsd.edu"},
    {name = "Suhas Goutham", email = "sgoutham@ucsd.edu"},
    {name = "Raghav Prasad", email = "rprasad@ucsd.edu"},
]

dependencies = [
    "shiny>=1.2.0",
    "faicons>=0.2.2",
    "numpy>=2.0.2",
    "pandas>=2.2.2",
    "polars>=1.12.0",
    "ipykernel>=6.17.1",
    "seaborn>=0.9.0",
    "matplotlib>=3.1.1",
    "statsmodels>=0.14.4",
    "scipy<=1.15.3",
    "scikit-learn>=1.5.2,!=1.6.*",
    "IPython>=7.34.0",
    "nest-asyncio>=1.5.6",
    "ruff",
    "black",
    "pyarrow>=17.0.0",
    "xgboost>=2.1.1",
    "pytest>=8.4.1",
]

[project.urls]
"Bug Reports" = "https://github.com/vnijs/pyrsm/issues"
"Source" = "https://github.com/vnijs/pyrsm"

[tool.setuptools]
include-package-data = true
packages = {find = {include = ["pyrsm*"], exclude = ["*.tests", "*.tests.*", "tests.*", "tests", "examples"]}}

[tool.setuptools.package-data]
"*" = ["www/*", "www/imgs/*", "www/js/*"]

[tool.setuptools.dynamic]
version = {attr = "pyrsm.__version__"}

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E402", "E722"]  # Allow module level imports not at top and bare except
target-version = "py312"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F403", "F405"]  # Allow * imports in __init__.py files
