[metadata]
name = pyrsm
version = attr: pyrsm.__version__
description = Python functions for Customer Analytics at the Rady School of Management (RSM)
long_description = Python functions for Customer Analytics at the Rady School of Management (RSM)
long_description_content_type = text/markdown
license = AGPL-3.0-only
author = Vincent Nijs <vnijs@ucsd.edu>, Vikram Jambulapati <vikjam@ucsd.edu>, Suhas Goutham <sgoutham@ucsd.edu>, Raghav Prasad <rprasad@ucsd.edu>
author_email = vnijs@ucsd.edu
project_urls =
    Bug Reports=https://github.com/vnijs/pyrsm/issues
    Source=https://github.com/vnijs/pyrsm

[options]
include_package_data = True
packages = find:
install_requires =
    numpy>=1.17.3
    pandas>=0.25.2
    seaborn>=0.9.0
    matplotlib>=3.1.1
    statsmodels>=0.10.1
    scipy>=1.4.1
    scikit-learn>=1.0.2
    IPython>=8.0.1
    shiny>=0.3.3
    pyperclip>=1.8.2

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
    examples
