[metadata]
name = pyrsm
version = attr: pyrsm.__version__
description = Python functions for Customer Analytics at the Rady School of Management (RSM)
long_description = Python functions for Customer Analytics at the Rady School of Management (RSM)
long_description_content_type = text/markdown
license = AGPL-3.0-only
author = Vincent Nijs <vnijs@ucsd.edu>, Vikram Jambulapati <vikjam@ucsd.edu>, Suhas Goutham <sgoutham@ucsd.edu>, Raghav Prasad <rprasad@ucsd.edu>
author_email = vnijs@ucsd.edu
project_urls =
    Bug Reports=https://github.com/vnijs/pyrsm/issues
    Source=https://github.com/vnijs/pyrsm

[options]
include_package_data = True
packages = find:
install_requires =
    shiny>=0.6.0
    shinyswatch>=0.2.4
    faicons>=0.2.1
    numpy>=1.17.3
    pandas>=2.1.4
    polars>=0.20.2
    duckdb>=0.8.1
    ipykernel>=6.23.1
    seaborn>=0.9.0
    matplotlib>=3.1.1
    statsmodels>=0.10.1
    scipy>=1.4.1
    scikit-learn>=1.0.2
    IPython>=8.0.1
    nest-asyncio>=1.5.6
    black>=22.6.0
    pyarrow>=14.0.1
    xgboost>=2.0.3 
    
[options.package_data]
pyrsm = pyrsm/radiant/www/*

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
    examples
    pyrsm.radiant.www
    pyrsm.radiant.www.imgs
    pyrsm.radiant.www.js

